@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-12-08T08:07:34Z",
-  "count" : 2,
+  "timestamp" : "2022-12-08T16:07:07Z",
+  "count" : 1,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -2, +4 ],
+  "count_decinc" : [ -3, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +2 ]
