@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-08T08:07:34Z",
+  "timestamp" : "2022-12-08T16:07:07Z",
   "count_outdated" : 1968,
   "uniques_outdated" : 641,
-  "count" : 1990,
-  "uniques" : 653,
+  "count" : 1991,
+  "uniques" : 654,
   "clones" : [
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
@@ -63,10 +63,10 @@
     },
     {
       "timestamp": "2022-12-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
