@@ -1,10 +1,10 @@
 {
-  "count": 22,
+  "count": 23,
   "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2022-12-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
